force-app/main/default/objects/AccountContactRelation/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account name</label>
    <type>Text</type>
</CustomField>