force-app/main/default/objects/AccountContactRelation/fields/B2BShopProfile__c.field-meta.xml
<CustomField>
    <fullName>B2BShopProfile__c</fullName>
    <label>B2B Shop Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>