force-app/main/default/objects/AccountContactRelation/fields/BusinessEmail__c.field-meta.xml
<CustomField>
    <fullName>BusinessEmail__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>