force-app/main/default/objects/AccountContactRelation/fields/MergeStatus__c.field-meta.xml
<CustomField>
    <fullName>MergeStatus__c</fullName>
    <label>MergeStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct</fullName>
                <color>#33FF33</color>
                <label>Correct</label>
            </value>
            <value>
                <fullName>Correct - Created by AM</fullName>
                <color>#33FF33</color>
                <label>Correct - Created by AM</label>
            </value>
            <value>
                <fullName>Probably correct</fullName>
                <color>#B6E32E</color>
                <label>Probably correct</label>
            </value>
            <value>
                <fullName>Not Sure</fullName>
                <color>#FFFF66</color>
                <label>Not Sure</label>
            </value>
            <value>
                <fullName>Probably incorrect - Relation not found in IL</fullName>
                <color>#FFCC66</color>
                <label>Probably incorrect - Relation not found in IL</label>
            </value>
            <value>
                <fullName>Probably incorrect - Different Area</fullName>
                <color>#FFCC66</color>
                <label>Probably incorrect - Different Area</label>
            </value>
            <value>
                <fullName>Incorrect - Different Opcos</fullName>
                <color>#FF6666</color>
                <label>Incorrect - Different Opcos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>