force-app/main/default/objects/AccountContactRelation/fields/NetsuiteCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCustomerNumber__c</fullName>
    <formula>Account.NetsuiteCustomerNumber__c</formula>
    <label>Netsuite Customer Number</label>
    <type>Text</type>
</CustomField>