force-app/main/default/objects/AccountContactRelation/fields/RelatedEmail__c.field-meta.xml
<CustomField>
    <fullName>RelatedEmail__c</fullName>
    <description>Copy the Email address of the Contact</description>
    <formula>Contact.Email</formula>
    <label>Related Email</label>
    <type>Text</type>
</CustomField>