force-app/main/default/objects/AccountContactRelation/fields/RelatedMobile__c.field-meta.xml
<CustomField>
    <fullName>RelatedMobile__c</fullName>
    <description>Copy the Mobile Phone Number of the related Contact</description>
    <formula>Contact.MobilePhone</formula>
    <label>Related Mobile</label>
    <type>Text</type>
</CustomField>