force-app/main/default/objects/AccountContactRelation/fields/RelatedPhone__c.field-meta.xml
<CustomField>
    <fullName>RelatedPhone__c</fullName>
    <description>Copy the Phone Number of the related Contact</description>
    <formula>Contact.Phone</formula>
    <label>Related Phone</label>
    <type>Text</type>
</CustomField>