force-app/main/default/objects/AccountContactRelation/fields/zRemoveRelatedEmail__c.field-meta.xml
<CustomField>
    <fullName>zRemoveRelatedEmail__c</fullName>
    <description>Email address at related Account</description>
    <label>zRemoveRelated Email</label>
    <type>Email</type>
</CustomField>