force-app/main/default/objects/AccountContactRelation/fields/zRemoveRelatedPhone__c.field-meta.xml
<CustomField>
    <fullName>zRemoveRelatedPhone__c</fullName>
    <description>Phone at the related Account</description>
    <label>zRemoveRelated Phone</label>
    <type>Phone</type>
</CustomField>